--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -72,7 +72,8 @@
                 <a data-toggle="modal" data-target="#@currentassignment.id" title="@Messages("Assignment.modify")"><i class="fa fa-pencil-square-o"></i></a>
                 <a title="@Messages("delete.assignment")" href="@controllers.lectures.admin.routes.Lecturehome.deleteAssignment(lecture.courseName,currentassignment.title,lecture.semester)"><i class="fa fa-times"></i></a>
               </td>
-              <td>@Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()/@Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()</td>
+              <td>@if(Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester)!=null){Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()}else{
+                0}/@if(Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)!=null){Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()}else{0}</td>
               <td>@currentassignment.deadline</td>
             </tr>
             <div class="modal fade" id="@currentassignment.id" tabindex="-1" role="dialog" aria-labelledby="@currentassignment.id" aria-hidden="true">
@@ -155,7 +156,8 @@
                   <a data-toggle="modal" data-target="#@currentassignment.id" title="@Messages("Assignment.modify")"><i class="fa fa-pencil-square-o"></i></a>
                   <a title="@Messages("delete.assignment")" href="@controllers.lectures.admin.routes.Lecturehome.deleteAssignment(lecture.courseName,currentassignment.title,lecture.semester)"><i class="fa fa-times"></i></a>
                 </td>
-                <td>@Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()/@Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()</td>
+                <td>@if(Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester)!=null){Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()}else{
+                  0}/@if(Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)!=null){Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()}else{0}</td>
                 <td>@currentassignment.deadline</td>
               </tr>
               <div class="modal fade" id="@currentassignment.id" tabindex="-1" role="dialog" aria-labelledby="@currentassignment.id" aria-hidden="true">
@@ -212,8 +214,8 @@
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="a@assignment.title">
                   <a role="button" data-toggle="collapse" data-parent="#assignmentlist" href="#@assignment.title" aria-expanded="true" aria-controls="@assignment.title">
-                    @assignment.title <span class="badge pull-right">@Handin.getHandinofassignmentinlecture(assignment,lecture,lecture.semester).size()
-                    /@Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()</span>
+                    @assignment.title <span class="badge pull-right">@if(Handin.getHandinofassignmentinlecture(assignment,lecture,lecture.semester)!=null){Handin.getHandinofassignmentinlecture(assignment,lecture,lecture.semester).size()}else {
+                  0}/@if(Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)!=null){Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()}else{0}</span>
                   </a>
                 </div>
                 <div id="@assignment.title" class="panel-collapse collapse" role="tabpanel" aria-labelledby="uncorrected">
