avoid assignment isoptional null. add additional input for creating assignment

--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -356,6 +356,12 @@
                 <input type="date" class="form-control" name="deadline">
               </div>
             </div>
+            <div class="checkbox">
+              <label class="control-label">
+                <input type="checkbox" name="isoptional" value="true">
+                @Messages("assignment.optional")
+              </label>
+            </div>
             <div class="form-group">
               <label>@Messages("lecture.action.upload")</label>
               <input type="file" name="uploadfile">
