--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -72,8 +72,7 @@
                 <a data-toggle="modal" data-target="#@currentassignment.id" title="@Messages("Assignment.modify")"><i class="fa fa-pencil-square-o"></i></a>
                 <a title="@Messages("delete.assignment")" href="@controllers.lectures.admin.routes.Lecturehome.deleteAssignment(lecture.courseName,currentassignment.title,lecture.semester)"><i class="fa fa-times"></i></a>
               </td>
-              <td>@if(Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester)!=null){Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()}else{
-                0}/@if(Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)!=null){Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()}else{0}</td>
+              <td>@Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()/@Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()</td>
               <td>@currentassignment.deadline</td>
             </tr>
             <div class="modal fade" id="@currentassignment.id" tabindex="-1" role="dialog" aria-labelledby="@currentassignment.id" aria-hidden="true">
@@ -156,8 +155,7 @@
                   <a data-toggle="modal" data-target="#@currentassignment.id" title="@Messages("Assignment.modify")"><i class="fa fa-pencil-square-o"></i></a>
                   <a title="@Messages("delete.assignment")" href="@controllers.lectures.admin.routes.Lecturehome.deleteAssignment(lecture.courseName,currentassignment.title,lecture.semester)"><i class="fa fa-times"></i></a>
                 </td>
-                <td>@if(Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester)!=null){Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()}else{
-                  0}/@if(Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)!=null){Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()}else{0}</td>
+                <td>@Handin.getHandinofassignmentinlecture(currentassignment,lecture,lecture.semester).size()/@Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()</td>
                 <td>@currentassignment.deadline</td>
               </tr>
               <div class="modal fade" id="@currentassignment.id" tabindex="-1" role="dialog" aria-labelledby="@currentassignment.id" aria-hidden="true">
@@ -214,8 +212,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="a@assignment.title">
                   <a role="button" data-toggle="collapse" data-parent="#assignmentlist" href="#@assignment.title" aria-expanded="true" aria-controls="@assignment.title">
-                    @assignment.title <span class="badge pull-right">@if(Handin.getHandinofassignmentinlecture(assignment,lecture,lecture.semester)!=null){Handin.getHandinofassignmentinlecture(assignment,lecture,lecture.semester).size()}else {
-                  0}/@if(Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)!=null){Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()}else{0}</span>
+                    @assignment.title <span class="badge pull-right">@Handin.getHandinofassignmentinlecture(assignment,lecture,lecture.semester).size()/@Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()</span>
                   </a>
                 </div>
                 <div id="@assignment.title" class="panel-collapse collapse" role="tabpanel" aria-labelledby="uncorrected">
@@ -233,8 +230,14 @@
                       @for(stu<-Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)){
                         <tr>
                           <td>@stu.firstname @stu.lastname</td>
-                          <td>@stu.getRepoByLecture(lecture).repopath</td>
-                          <td>@stu.getRepoByLecture(lecture).owner.contains(semesteruser)</td>
+                          <td>
+                            @if(stu.getRepoByLecture(lecture)!=null){
+                          @stu.getRepoByLecture(lecture).repopath}
+                          </td>
+                          <td>
+                          @if(stu.getRepoByLecture(lecture)!=null){
+                          @stu.getRepoByLecture(lecture).owner.contains(semesteruser)}
+                          </td>
                         </tr>
                       }
                     </table>
