--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -42,6 +42,12 @@
           @Messages("lecture.home.homework")
             <br>
             @if(lecture.attendent.contains(semesteruser)){
+              @if(Repo.findRepoByLectureAndOwner(lecture.semester,semesteruser,lecture)!=null&&semesteruser.roles.equals(UserRoll.Students.toString)){
+                @Messages("lecture.home.homework.local.exist")
+              }else{
+                <form action="@controllers.lectures.user.routes.Lecturehome.addRemoteRepotoLecture(semesteruser.lastname,lecture.semester,lecture.courseName)" method="post"><div class="alert alert-warning" role="alert">@Messages("lecture.home.homework.local.noexist") </div><button class="btn btn-success pull-right" type="submit">@Messages("lecture.remote.generate")</button></form>
+              }
+
               <table class="table table-striped custab">
                 <thead>
                   <tr>
@@ -65,9 +71,9 @@
                     </td>
                     <td>@controllers.lectures.user.Lecturehome.lastUpdateStatus(semesteruser,lecture)</td>
                     <td><a data-toggle="modal" data-target="#eval@currentassignment.id" title="@Messages("click.for.detail")">
-                    @if(Handin.
-                            getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)==null){ 0 } else {Handin.
-                      getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).earndpoints}/@currentassignment.totalpoints</a></td>
+                     @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null) {
+                    @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).earndpoints/@currentassignment.totalpoints
+                     }else{0/@currentassignment.totalpoints}</a></td>
                     <td>@currentassignment.deadline</td>
                   </tr>
                   @*modal for showing handin assginment*@
@@ -122,7 +128,9 @@
                 <tr>
                   <td>@Handin.getValidHandinofstudentinlecture(lecture,semesteruser,lecture.semester).size()/@lecture.requriednumberofvalidassignment</td>
                   <td>@Handin.getOptionalAssignmentofStudentsinLecture(lecture.semester,lecture,semesteruser).size()/@lecture.optionalassignments</td>
-                  <td>@Evaluation.findByLectureAndUser(lecture.semester,lecture,semesteruser).performance</td>
+                  <td>
+                  @if(Evaluation.findByLectureAndUser(lecture.semester,lecture,semesteruser)!=null){
+                  @Evaluation.findByLectureAndUser(lecture.semester,lecture,semesteruser).performance}else{0.0}</td>
                 </tr>
               </table>
             <a class="btn btn-danger pull-right" href="@controllers.lectures.user.routes.Lecturehome.deleteSemesteruserfromlecture(semesteruser.lastname,lecture.semester,lecture.courseName)">@Messages("lecture.leave")</a>
@@ -158,7 +166,7 @@
               @if(Repo.findRepoByLectureAndOwner(lecture.semester,semesteruser,lecture)!=null&&semesteruser.roles.equals(UserRoll.Students.toString)){
                 @Messages("lecture.home.homework.remote.exist")<br><p class="bg-info">@Repo.findRepoByLectureAndOwner(lecture.semester,semesteruser,lecture).repopath</p>
               }else{
-                <form action="@controllers.lectures.user.routes.Lecturehome.addRemoteRepotoLecture(semesteruser.lastname,lecture.semester,lecture.courseName)" method="post">@Messages("lecture.home.homework.remote.noexist") <button class="btn btn-success pull-right" type="submit">@Messages("lecture.remote.generate")</button></form>
+                <form action="@controllers.lectures.user.routes.Lecturehome.addRemoteRepotoLecture(semesteruser.lastname,lecture.semester,lecture.courseName)" method="post"><div class="alert alert-warning" role="alert">@Messages("lecture.home.homework.remote.noexist") </div><button class="btn btn-success pull-right" type="submit">@Messages("lecture.remote.generate")</button></form>
               }
 
                 <table class="table table-striped custab">
@@ -178,8 +186,10 @@
                       <td>@currentassignment.numberofexercise</td>
                       <td>@currentassignment.addtionalinfo</td>
                       <td>@controllers.lectures.user.Lecturehome.lastUpdateStatus(semesteruser,lecture)</td>
-                      <td><a data-toggle="modal" data-target="#evalr@currentassignment.id" title="@Messages("click.for.detail")">@if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null){Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).earndpoints} else {
-                         0}/@currentassignment.totalpoints</a></td>
+                      <td><a data-toggle="modal" data-target="#evalr@currentassignment.id" title="@Messages("click.for.detail")">
+                        @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null){
+                        @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).earndpoints/@currentassignment.totalpoints}else{
+                          0/@currentassignment.totalpoints}</a></td>
                       <td>@currentassignment.deadline</td>
                     </tr>
                     @*modal for showing the assignment result*@
