--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -226,11 +226,14 @@
                           <th>@Messages("evaluation.repo")</th>
                           <th>@Messages("evaluation.access")</th>
                           <th>@Messages("evaluation.finish")</th>
-                          <th>@Messages("evaluation.add")</th>
                         </tr>
                       </thead>
                       @for(stu<-Semesteruser.findAllstudentsByLecture(lecture.semester,lecture)){
-                        <tr>
+                        <tr @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
+                          class="success"
+                        }else{
+                          class="danger"
+                        }>
                           <td>@stu.firstname @stu.lastname</td>
                           <td>
                             @if(stu.getRepoByLecture(lecture)!=null){
@@ -238,8 +241,67 @@
                           </td>
                           <td>
                           @if(stu.getRepoByLecture(lecture)!=null){
-                          @stu.getRepoByLecture(lecture).owner.contains(semesteruser)}
+                          @if(stu.getRepoByLecture(lecture).owner.contains(semesteruser)){
+                            @Messages("admin.access.student.true")
+                            }else{
+                            @if(controllers.lectures.admin.Assignmentevaluation.grandaccess(semesteruser,stu,lecture)){
+                              @Messages("admin.access.student.true")}else{
+                              <div class="label label-danger">@Messages("admin.access.student.false")</div>
+                            }
+                            }
+                          }
                           </td>
+                          <td>@if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
+                            @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).isevaluated){
+                              @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).earndpoints/@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).totalpoints
+                            }else{
+                              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@assignment.id@stu.id">
+                                @Messages("evaluation.add")
+                              </button>
+                            }
+                          }else{
+                            @Messages("admin.homework.correction")
+                          }</td>
+                          @*modal to add  evaluation to user handin*@
+                          <div class="modal fade" id="@assignment.id@stu.id" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                  <h4 class="modal-title" id="myModalLabel">@Messages("homework.evaluation")</h4>
+                                </div>
+                                <div class="modal-body">
+        ...                     <form id="exerciseForm" action="submit()">
+                                @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
+                                  @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).exercises.get(0).title}
+                                @* @for((exercise,index)<-Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).exercises.zipWithIndex){*@
+                                  @*<div class="form-inline">*@
+                                    @*<div class="form-group">*@
+                                      @*<label>@Messages("ex.title")</label>*@
+                                      @*<input type="text" class="form-control" name="title">*@
+                                    @*</div>*@
+                                    @*<div class="form-group">*@
+                                      @*<label>@Messages("gain")</label>*@
+                                      @*<input type="number" step="0.01" class="form-control" name="exercise[@index].totalpoints">*@
+                                    @*</div>*@
+                                    @*<div class="form-group">*@
+                                      @*<label>@Messages("total")</label>*@
+                                      @*<input type="number" step="0.01" class="form-control" name="exercise[@index].earndpoints">*@
+                                    @*</div>*@
+                                  @*</div>*@
+                                  @*<textarea class="form-control" rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments"></textarea>*@
+
+                                @*}*@
+                                 <pre><code id="testArea">
+                                 </code></pre>
+                                <input type="submit" class="btn btn-primary">
+                                </form>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+
                         </tr>
                       }
                     </table>
