--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -271,26 +271,23 @@
                                   <h4 class="modal-title" id="myModalLabel">@Messages("homework.evaluation")</h4>
                                 </div>
                                 <div class="modal-body">
-                             <form id="exerciseForm" action="submit()">
+                             <form id="testForm" action="javascript:submit()">
                                 @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
                                  @for((exercise,index)<-Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).exercises.zipWithIndex){
-                                  <div class="form-inline">
-                                   @exercise.title
-                                  <div class="form-group">
+                                      @exercise.title
+                                  <div id="tp" class="form-group">
                                       <label>@Messages("gain")</label>
-                                      <input type="number" step="0.01" class="form-control" name="exercise[@index].totalpoints">
+                                      <input type="number"  step="0.01" class="form-control" name="exercise[@index].totalpoints">
                                     </div>
-                                    <div class="form-group">
+                                    <div id="ep" class="form-group">
                                      <label>@Messages("total")</label>
-                                    <input type="number" step="0.01" class="form-control" name="exercise[@index].earndpoints">
+                                    <input type="number"  step="0.01" class="form-control" name="exercise[@index].earndpoints">
                                     </div>
-                                  </div>
-                                 <textarea class="form-control" rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments"></textarea>
+                                  <textarea class="form-control" id="ec" rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments"></textarea>
+
                                }
+                                  <input type="submit">
                                 }
-                                 <pre><code id="testArea">
-                                 </code></pre>
-                                <input type="submit" class="btn btn-primary">
                                 </form>
                                 </div>
                               </div>
