--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -53,6 +53,9 @@
             </div>
             <script src="@routes.Assets.at("javascripts/datepicker/datepicker.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/createlecturecheckbox.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/form2json/form2js.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/form2json/submitform.js")" type="text/javascript"></script>
+
         </div>
 
 
