--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -271,19 +271,19 @@
                                   <h4 class="modal-title" id="myModalLabel">@Messages("homework.evaluation")</h4>
                                 </div>
                                 <div class="modal-body">
-                             <form id="testForm" action="javascript:submit()">
+                             <form id="@assignment.title@stu.userHash" action="javascript:submit('@assignment.title@stu.userHash')">
                                 @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
                                  @for((exercise,index)<-Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).exercises.zipWithIndex){
                                       @exercise.title
-                                  <div id="tp" class="form-group">
+                                  <div class="form-group">
                                       <label>@Messages("gain")</label>
                                       <input type="number"  step="0.01" class="form-control" name="exercise[@index].totalpoints">
                                     </div>
-                                    <div id="ep" class="form-group">
+                                    <div class="form-group">
                                      <label>@Messages("total")</label>
                                     <input type="number"  step="0.01" class="form-control" name="exercise[@index].earndpoints">
                                     </div>
-                                  <textarea class="form-control" id="ec" rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments"></textarea>
+                                  <textarea class="form-control"  rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments"></textarea>
 
                                }
                                   <input type="submit">
