--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -43,7 +43,9 @@
             <br>
             @if(lecture.attendent.contains(semesteruser)){
               @if(Repo.findRepoByLectureAndOwner(lecture.semester,semesteruser,lecture)!=null&&semesteruser.roles.equals(UserRoll.Students.toString)){
-                <div class="textfont">@Messages("lecture.home.homework.local.exist")</div>
+                <div class="textfont">@Messages("lecture.home.homework.local.exist")<br>
+                <div class="label label-success">@Messages("repo.last.status") @controllers.lectures.user.Lecturehome.lastUpdateStatus(semesteruser,lecture)</div>
+                </div>
               }else{
                 <form action="@controllers.lectures.user.routes.Lecturehome.addRemoteRepotoLecture(semesteruser.lastname,lecture.semester,lecture.courseName)" method="post"><div class="alert alert-warning" role="alert">@Messages("lecture.home.homework.local.noexist") </div><button class="btn btn-success pull-right" type="submit">@Messages("lecture.remote.generate")</button></form>
               }
@@ -69,11 +71,13 @@
                     @if(currentassignment.isExpired){<a data-toggle="modal" data-target="#@currentassignment.id" title="@Messages("Assignment.handin")"><i class="fa fa-pencil-square-o"></i></a>
                       <a title="revert last upload" href="@controllers.lectures.user.routes.Lecturehome.reverthandinhomework(currentassignment.id,semesteruser.lastname,lecture.semester,lecture.courseName)"><i class="fa fa-times"></i></a>}
                     </td>
-                    <td>@controllers.lectures.user.Lecturehome.lastUpdateStatus(semesteruser,lecture)</td>
+                    <td>@if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null){
+                      <div class="label label-success">@Messages("handin.ok")</div>
+                    }else{<div class="label label-danger">@Messages("handin.notok")</div>}</td>
                     <td><a data-toggle="modal" data-target="#eval@currentassignment.id" title="@Messages("click.for.detail")">
                      @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null) {
-                    @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).earndpoints/@currentassignment.totalpoints
-                     }else{0/@currentassignment.totalpoints}</a></td>
+                    @Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).earndpoints/@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).totalpoints
+                     }else{0.0/0.0}</a></td>
                     <td>@currentassignment.deadline</td>
                   </tr>
                   @*modal for showing handin assginment*@
@@ -110,13 +114,24 @@
                           <h4 class="modal-title" id="myModalLabel">@Messages("Assignment.evaluation")</h4>
                         </div>
                         <div class="modal-body">
-                          show some results
+                        @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment)!=null){
+                            @for(exercise<-Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,semesteruser,currentassignment).exercises){
+                              <div class="row">
+                                <div class="lable label-info text-center">@exercise.title</div>
+                                <div class="col-xs-2"><label>@Messages("gain")</label>@exercise.earndpoints</div>
+                                <div class="col-xs-2"><label>@Messages("total")</label>@exercise.totalpoints</div>
+                                <blockquote class="col-xs-12"><p>@exercise.comments</p><footer>@Messages("comment")</footer></blockquote>
+                              </div>
+                            }
+
+                        }else{<span class="alert alert-warning">@Messages("nohandin")</span>}
                         </div>
                       </div>
                     </div>
                   </div>
                 }
               </table>
+              <hr>
               <table class="table table-striped custab">
                 <thead>
                   <tr>
