--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -89,6 +89,10 @@
                           <input type="number" class="form-control" name="numberofexercise" value="@currentassignment.numberofexercise">
                         </div>
                         <div class="col-xs-6">
+                          <label>@Messages("Number.totalpoints")</label>
+                          <input type="number" class="form-control" name="totalpoints" value="@currentassignment.totalpoints">
+                        </div>
+                        <div class="col-xs-6">
                           <label>@Messages("deadline")</label>
                           <input type="date" class="form-control" name="deadline" value="@currentassignment.deadline.format("yyyy-MM-dd")">
                         </div>
@@ -170,6 +174,10 @@
                           <div class="col-xs-6">
                             <label>@Messages("Number.exercise")</label>
                             <input type="number" class="form-control" name="numberofexercise" value="@currentassignment.numberofexercise">
+                          </div>
+                          <div class="col-xs-6">
+                            <label>@Messages("Number.totalpoints")</label>
+                            <input type="number" class="form-control" name="totalpoints" value="@currentassignment.totalpoints">
                           </div>
                           <div class="col-xs-6">
                             <label>@Messages("deadline")</label>
@@ -421,6 +429,10 @@
               <div class="col-xs-6">
                 <label>@Messages("Number.exercise")</label>
                 <input type="number" class="form-control" name="numberofexercise" >
+              </div>
+              <div class="col-xs-6">
+                <label>@Messages("Number.totalpoints")</label>
+                <input type="number" class="form-control" name="totalpoints" >
               </div>
               <div class="col-xs-6">
                 <label>@Messages("deadline")</label>
