--- a/app/views/dashboard/admin/dashboardadmin.scala.html
+++ b/app/views/dashboard/admin/dashboardadmin.scala.html
@@ -23,7 +23,7 @@
           </div>
           <div id="myProfile" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="list-group">
-              <a href="@controllers.routes.Dashboard.index()" class="list-group-item">
+              <a href="@controllers.system.routes.SystemControll.usermanagement()" class="list-group-item">
               @Messages("dashboard.admin.user")
               </a>
               <a href="@controllers.account.settings.routes.Index.index()" class="list-group-item">
@@ -34,7 +34,8 @@
 
         </div>
       </div>
-    @content
+      @content
     </div>
+
   </div>
 }
