--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -55,6 +55,7 @@
             <script src="@routes.Assets.at("javascripts/createlecturecheckbox.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/form2json/form2js.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/form2json/submitform.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/usermanage/usermanageform.js")" type="text/javascript"></script>
 
         </div>
 
