--- a/app/views/dashboard/index.scala.html
+++ b/app/views/dashboard/index.scala.html
@@ -9,7 +9,7 @@
             <h2 class="media-heading">@user.firstname @user.lastname</h2>
             <ul>
                 <li>Matrikel Number: @user.id</li>
-                <li>Lastname: @user.firstname</li>
+                <li>Lastname: @user.lastname</li>
                 <li>User Group: @user.roles.toString()</li>
                 <li>User created on: @user.dateCreation</li>
                 <li>User last login: @user.dateLastlogin</li>
