--- a/app/views/dashboard/admin/usermanagement.scala.html
+++ b/app/views/dashboard/admin/usermanagement.scala.html
@@ -2,7 +2,7 @@
 
 @dashboard.admin.dashboardadmin(user){
 
-  <div class="well well-sm col-md-6">
+  <div class="well well-sm col-md-6 col-md-offset-1">
     <div class="page-header">
       <h1>@Messages("change.userroll")</h1>
     </div>
